--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,81 @@
-.App {
-  text-align: center;
+* {
+  margin: 0 auto;
+}
+:root {
+  --red: #d01c28;
+  --gray: #2e2e2e;
+}
+nav {
+  display: flex;
+  justify-content: space-between;
+  max-width: 1280px;
+  margin: 0 auto;
+
+  margin-bottom: 100px;
+  height: 70px;
+  align-items: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.hero-image img {
+  margin-top: 0;
+  margin: auto;
+}
+main {
+  display: flex;
+  margin: 0 auto;
+  max-width: 1280px;
+  height: calc(100vh -70px);
+}
+.content h1 {
+  font-size: 100px;
+  color: #be400c;
+  line-height: 80px;
+}
+.social-icon img {
+  height: 50px;
+  align-items: left;
+}
+.social-icon {
+  align-items: left;
+  margin-right: 550px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.logo {
+  align-items: center;
+  height: 50px;
+  margin-left: 0;
+  margin-right: 0;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.content {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  gap: 20px;
+}
+.text {
+  color: var(--gray);
+  font-weight: 500;
+  font-size: 20px;
+}
+
+nav ul {
+  display: flex;
+  gap: 16px;
+  list-style: none;
+  background-color: #a40c0c;
+  color: whitesmoke;
+  padding: 20px;
+  border-radius: 10px;
+}
+button {
+  all: unset;
+  background: #040c34;
   color: white;
+  height: 32px;
+  padding: 6px 16px;
+  size: 30px;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.order {
+  font-size: 25px;
+  display: flex;
+  gap: 20px;
 }
